--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -1,44 +1,49 @@
 .content-container {
-    padding: 30px;
-    background-color: #f8f8f8;
-  }
-  
+  padding: 30px;
+  background-color: #f8f8f8;
+}
+
+.flex-container {
+  display: flex;
+  gap: 10rem;
+}
+
+.experience-item {
+  background-color: #fff;
+  border-radius: 10px;
+  width: 35rem;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.experience-item h2 {
+  font-size: 24px;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.experience-item p {
+  font-size: 16px;
+  color: #666;
+  margin: 0;
+}
+
+.h1-experience {
+  font-size: 36px;
+  color: #333;
+  margin-top: 4rem;
+  margin-bottom: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+@media (max-width: 767px) {
   .experience-item {
-    background-color: #fff;
-    border-radius: 10px;
-    width: 30rem;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    padding: 15px;
   }
-  
-  .experience-item h2 {
-    font-size: 24px;
-    margin-bottom: 5px;
-    color: #333;
+
+  h1 {
+    font-size: 28px;
   }
-  
-  .experience-item p {
-    font-size: 16px;
-    color: #666;
-    margin: 0;
-  }
-  
-  .h1-experience {
-    font-size: 36px;
-    color: #333;
-    margin-bottom: 30px;
-    font-weight: bold;
-    text-align: center;
-  }
-  
-  @media (max-width: 767px) {
-    .experience-item {
-      padding: 15px;
-    }
-  
-    h1 {
-      font-size: 28px;
-    }
-  }
-  
+}
