--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,28 +1,38 @@
-.Header-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: auto;
-}
-
-.Header-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    font-size: large;
-}
-
-.Header-nav li {
-    margin-top: 5px;
-    padding: 0;
-}
-
-.link {
-    text-decoration: none;
-    margin: 15px;
-    color: rgb(174, 239, 231);
-}
-
 .heading {
     margin-bottom: auto;
+}
+
+.logo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo {
+    width: 16rem;
+    height: auto;
+    border-radius: 38%;
+    margin-top: 8rem;
+    margin-bottom: 5rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, filter 0.2s;
+}
+
+.logo:hover {
+    transform: scale(1.05);
+    filter: brightness(0.8) blur(2px);
+}
+
+.header-title {
+    font-size: 2.5rem;
+    margin-top: 20px;
+    color: pink;
+}
+
+.header-description {
+    font-size: 1.2rem;
+    margin-top: 25px;
+    margin-bottom: 7.5rem;
+    color: #ddd;
+    text-align: center;
 }
