change color of nav link on home page

--- a/src/Components/Header/nav.css
+++ b/src/Components/Header/nav.css
@@ -12,7 +12,7 @@
   .nav-link {
     text-decoration: none;
     font-size: 1.2rem;
-    color: #333;
+    color: rgb(90, 88, 88);
     transition: color 0.3s;
   }
   
