--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -38,6 +38,39 @@
   text-align: center;
 }
 
+.project-list {
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-left: 17rem;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
+  width: 70rem;
+}
+
+.project-carousel-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.project-carousel {
+  flex: 1;
+  max-width: 500px;
+  margin: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.carousel {
+  width: 100%;
+  max-width: 450px;
+  margin: 0 auto;
+}
+
 @media (max-width: 767px) {
   .experience-item {
     padding: 15px;
