--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,3 +1,10 @@
 .about-container {
     margin-top: 10rem;
+    box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+    .about-container {
+        margin-top: 5rem;
+    }
 }
