--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -1,11 +1,20 @@
 .content-container {
   padding: 30px;
   background-color: #f8f8f8;
+  max-width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .flex-container {
   display: flex;
-  gap: 10rem;
+  flex-direction: row;
+  gap: 8rem;
+  margin-left: 10px;
+}
+
+.experience-list {
+  width: auto;
 }
 
 .experience-item {
@@ -46,7 +55,7 @@
   justify-content: center;
   flex-wrap: wrap;
   text-align: center;
-  width: 70rem;
+  width: auto;
 }
 
 .project-carousel-container {
@@ -74,10 +83,21 @@
 @media (max-width: 767px) {
   .experience-item {
     padding: 15px;
+    width: auto;
   }
 
-  h1 {
+  .h1-experience {
     font-size: 28px;
   }
-}
 
+  .flex-container {
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+  }
+
+  .project-list {
+    margin-left: 0;
+    width: auto;
+  }
+}
