--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,5 +1,8 @@
 .heading {
     margin-bottom: auto;
+    max-width: 100%; 
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .nav-heading {
@@ -11,6 +14,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 100%;
+    margin: 0 auto; 
 }
 
 .logo-img {
@@ -54,4 +59,10 @@
     margin-bottom: 7.5rem;
     color: #ddd;
     text-align: center;
+}
+
+@media (max-width: 768px) {
+    .header-title {
+        font-size: 2rem;
+    }
 }
