--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -1,11 +1,15 @@
 .skills-section {
   background-color: #eeeeee;
-  padding: 15px;
+  padding: 15px 20px;
   margin-top: 50px;
   display: flex;
-  width: 15rem;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  box-sizing: border-box;
+  max-width: 100%;
+  margin-left: 0;
+  margin: 0;
+  width: 11rem;
 }
 
 .container {
@@ -52,4 +56,26 @@
 
 .skill-icon:hover {
   transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  .skills-section {
+      width: auto;
+      padding: 15px;
+  }
+
+  .section-title {
+      font-size: 28px;
+  }
+
+  .skills-icons {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+  }
+
+  .skill {
+      margin: 10px;
+  }
 }
