--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -44,16 +44,14 @@
   margin-top: 4rem;
   margin-bottom: 20px;
   font-weight: bold;
-  text-align: center;
 }
 
 .project-list {
   padding-bottom: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
-  margin-left: 17rem;
-  justify-content: center;
-  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   width: auto;
 }
@@ -67,7 +65,6 @@
 }
 
 .project-carousel {
-  flex: 1;
   max-width: 500px;
   margin: 1rem;
   border-radius: 10px;
