--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -13,39 +13,6 @@
   margin-left: 10px;
 }
 
-.experience-list {
-  width: auto;
-}
-
-.experience-item {
-  background-color: #fff;
-  border-radius: 10px;
-  width: 35rem;
-  padding: 20px;
-  margin-bottom: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.experience-item h2 {
-  font-size: 24px;
-  margin-bottom: 5px;
-  color: #333;
-}
-
-.experience-item p {
-  font-size: 16px;
-  color: #666;
-  margin: 0;
-}
-
-.h1-experience {
-  font-size: 36px;
-  color: #333;
-  margin-top: 4rem;
-  margin-bottom: 20px;
-  font-weight: bold;
-}
-
 .project-list {
   padding-bottom: 2rem;
   margin-bottom: 2rem;
@@ -56,37 +23,13 @@
   width: auto;
 }
 
-.project-carousel-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-top: 2rem;
-}
-
-.project-carousel {
-  max-width: 500px;
-  margin: 1rem;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.carousel {
-  width: 100%;
-  max-width: 450px;
-  margin: 0 auto;
+.projects-h1 {
+  font-weight: light;
+  font-size: 20px;
+  color: rgb(63, 62, 62);
 }
 
 @media (max-width: 767px) {
-  .experience-item {
-    padding: 15px;
-    width: auto;
-  }
-
-  .h1-experience {
-    font-size: 28px;
-  }
-
   .flex-container {
     flex-direction: column;
     gap: 2rem;
