--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #0d0d0d;
+  height: 12vh;
   display: flex;
   flex-direction: column;
   align-items: center;
