--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -8,6 +8,11 @@
 .logo {
     width: 90px;
     margin-right: 20rem;
+    transition: transform 0.2s ease-in-out;
+}
+
+.logo:hover {
+    transform: scale(1.1);
 }
 
 .social-icons {
