--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -13,6 +13,25 @@
   margin-left: 10px;
 }
 
+.img-section {
+  background-color: #f9f9f9;
+  position: relative;
+  overflow: hidden;
+}
+
+.profile-img {
+  width: 55rem;
+  height: 25rem;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .project-list {
   padding-bottom: 2rem;
   margin-bottom: 2rem;
