--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -1,18 +1,35 @@
-.carousel-caption {
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 10px;
-    width: 15rem;
-    height: 15rem;
-  }
-  
-  .carousel-date,
-  .carousel-lang,
-  .carousel-det {
-    margin: 5px 0;
-  }
+.project-carousel-container {
+  width: 400px;
+  max-width: 400px;
+  margin: 0 auto;
+}
 
-  .carousel-pack {
-    display: flex;
-    flex-direction: column;
-  }
+.project-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousels {
+  display: flex;
+  flex-direction: row;
+}
+
+.carousel-pack {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-date,
+.carousel-lang,
+.carousel-det {
+  margin: 5px 0;
+  font-size: 14px;
+}
