--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -2,6 +2,12 @@
   width: 400px;
   max-width: 400px;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.project-carousel-container .carousel {
+  width: 100%;
 }
 
 .project-img {
@@ -12,19 +18,16 @@
 
 .carousels {
   display: flex;
-  flex-direction: row;
 }
 
 .carousel-pack {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
   text-align: center;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-right: 10px;
 }
 
 .carousel-date,
