--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -1,23 +1,15 @@
 .project-carousel-container {
+  flex: 0 0 calc(33.33% - 20px);
+  margin-bottom: 25px;
+  box-sizing: border-box;
   width: 400px;
-  max-width: 400px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-}
-
-.project-carousel-container .carousel {
-  width: 100%;
+  align-items: center;
 }
 
 .project-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.carousels {
-  display: flex;
 }
 
 .carousel-pack {
