projects displaying correctly

--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -21,6 +21,9 @@
   padding-bottom: 2rem;
   margin-top: 2rem;
   text-align: center;
+  display: flex; /* Add this line to make it a flex container */
+  flex-wrap: wrap; /* Allow items to wrap to the next line */
+  justify-content: space-between; /* Distribute items along the main axis */
 }
 
 .projects-h1 {
