--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,7 +1,15 @@
 .about-container {
     margin-top: 10rem;
     box-sizing: border-box;
+    text-align: center;
 }
+
+.about-heading {
+    font-size: 4rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 1rem;
+  }
 
 @media (max-width: 768px) {
     .about-container {
