--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -13,3 +13,9 @@
     font-weight: lighter;
     font-size: 20px;
 }
+
+
+.nav-footer {
+    margin-left: 25rem;
+    /* padding-bottom: 10px; */
+}
