--- a/src/Components/Header/nav.css
+++ b/src/Components/Header/nav.css
@@ -1,3 +1,7 @@
+.header-nav {
+  padding-top: 18px;
+}
+
 .nav-list {
     list-style: none;
     display: flex;
@@ -11,7 +15,7 @@
   
   .nav-link {
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: rgb(233, 233, 233);
     transition: color 0.3s;
   }
