devicon implementation, working on it

--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -27,6 +27,10 @@
     color: #444;
     margin: 15px 0;
   }
+
+  .linkedin-logo {
+    width: 40px;
+  }
   
   .contact-link {
     color: #007bff;
