--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -7,10 +7,17 @@
     text-align: center;
   }
   
+  .portfolio-h1 {
+    font-size: 3rem;
+    color: #333;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+
   .project-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Display 4 columns */
-    gap: 20px; /* Add margin between items */
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
     margin-top: 1%;  
   }
   
