--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
   }
   
-  .contact-title {
-    font-size: 4rem;
+  .contact-h1 {
+    font-size: 3rem;
     color: #333;
     font-weight: bold;
     margin-bottom: 1rem;
