--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -17,7 +17,8 @@
 
 .social-icons {
     display: flex;
-    margin-left: 10rem;
+    margin-left: 12rem;
+    margin-top: 15px;
 }
 
 .social-icons img {
