--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -4,12 +4,10 @@
   margin-top: 50px;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
   box-sizing: border-box;
   max-width: 100%;
-  margin-left: 0;
-  margin: 0;
-  width: 11rem;
+  align-items: center;
+  width: 65%;
 }
 
 .container {
@@ -26,7 +24,7 @@
 
 .skills-icons {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
@@ -45,7 +43,7 @@
 
 .skill-icon {
   font-size: 55px;
-  color: #3866c1;
+  color: #596ea1;
   transition: transform 0.2s;
 }
 
