edit font and make routes styling uniform

--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px auto;
+    margin-top: 4%;
     max-width: 35%;
+    margin-left: 10%;
   }
   
   .contact-h1 {
@@ -15,8 +16,9 @@
     text-align: center;
   }
   
-  .contact-text {
+  .contact-p {
     font-size: 1.8rem;
+    font-weight: 300;
     margin-top: 0.2rem;
     padding-left: 20px;
     padding-right: 20px;
