--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -29,13 +29,9 @@
     max-width: 600px;
     padding: 2rem;
     text-align: left;
-  }
-  
-  .about-text p {
-    margin-bottom: 20px;
+    color: #7b7b7b;
     font-size: 1.2rem;
-    color: #666;
-    line-height: 1.5;
+    font-weight: 300;
   }
 
   .header-p {
