--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -62,6 +62,18 @@
   right: -50%;
 }
 
+.pro-date {
+    font-size: 14px;
+    color: #555;
+    padding: 10px;
+}
+
+.pro-title {
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px;
+}
+
 @media (max-width: 767px) {
   .flex-container {
     flex-direction: column;
