--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #04322d;
+  background-color: #203b38;
   height: 12vh;
   display: flex;
   flex-direction: column;
