--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -42,6 +42,17 @@
   padding: 0 15px;
 }
 
+.project-card {
+  width: calc(33.333% - 1rem);
+  margin-bottom: 1rem;
+  box-sizing: border-box;
+}
+
+.project-card img {
+  width: 100%;
+  height: auto;
+}
+
 .projects-h1::before,
 .projects-h1::after {
   content: "";
@@ -74,15 +85,14 @@
     padding: 10px;
 }
 
-@media (max-width: 767px) {
-  .flex-container {
-    flex-direction: column;
-    gap: 2rem;
-    align-items: center;
+@media (max-width: 991px) {
+  .project-card {
+    width: calc(50% - 1rem);
   }
+}
 
-  .project-list {
-    margin-left: 0;
-    width: auto;
+@media (max-width: 767px) {
+  .project-card {
+    width: 100%;
   }
 }
