edit styling and add image

--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -1,6 +1,5 @@
 .skills-section {
-  /* Change background color */
-  background-color: #eeeeee;
+  background-color: #fefdfd;
   padding: 15px 20px;
   margin-top: 1%;
   display: flex;
