--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,40 +1,57 @@
 .about-con {
-  /* align-items: center; */
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
 }
 
 .header-p {
   flex: 1;
-  max-width: 400px;
-  margin-left: 7rem;
-  margin-top: 5%;
+  max-width: 30rem;
+  margin-left: 4rem;
+  margin-top: 4.5%;
+  text-align: left;
+}
+
+.about-img {
+  display: flex;
+  flex-direction: row;
+  background-color: #fefdfd;
+  height: 24rem;
+  width: 80rem;
+  border-bottom: 1px solid rgb(238, 238, 238);
+  /* border-left: 1px solid rgb(238, 238, 238); */
 }
 
 .about-h1 {
   font-size: 5rem;
   font-weight: bold;
   color: #333;
-  text-align: center;
   max-width: 400px;
   margin-bottom: 4%;
+  margin-left: 15px;
 }
 
 .prof-img {
-  width: 25rem;
-  height: 12rem;
-  border-radius: 50%;
-  border: 1px solid #073f30;
+  width: 52rem;
+  height: 24rem;
 }
 
-.about-text {
+.about-text1 {
   max-width: 600px;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 10px;
+  padding-right: 10px;
   color: #7b7b7b;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 300;
+  margin-bottom: 6%;
+}
+
+.about-text2 {
+  max-width: 600px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #333;
+  font-size: 1.1rem;
+  font-weight: 350;
 }
 
 @media (max-width: 768px) {
@@ -51,6 +68,6 @@
 
   .skills {
     max-width: 100%;
-    padding-left: 0; /* Remove padding on smaller screens */
+    padding-left: 0;
   }
 }
