--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -7,7 +7,7 @@
   flex: 1;
   max-width: 30rem;
   margin-left: 4rem;
-  margin-top: 4.5%;
+  margin-top: 7%;
   text-align: left;
 }
 
@@ -18,7 +18,7 @@
   height: 24rem;
   width: 80rem;
   border-bottom: 1px solid rgb(238, 238, 238);
-  /* border-left: 1px solid rgb(238, 238, 238); */
+  margin-left: 20px;
 }
 
 .about-h1 {
