--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -4,6 +4,7 @@
   max-width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
+  text-align: center;
 }
 
 .img-section {
@@ -15,8 +16,7 @@
   flex-direction: row;
 }
 
-.profile-img
-.profile-imgT {
+.profile-img .profile-imgT {
   width: 33rem;
   height: 15rem;
 }
@@ -28,8 +28,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-left: 8rem;
-  margin-right: 8rem;
+  margin-left: 12rem;
+  margin-right: 12rem;
 }
 
 .projects-h1 {
@@ -37,20 +37,22 @@
   font-size: 20px;
   color: rgb(101, 101, 101);
   position: relative;
-  box-sizing: border-box;
   display: inline-block;
-  padding: 0 15px;
 }
 
 .project-card {
   width: calc(33.333% - 1rem);
   margin-bottom: 1rem;
-  box-sizing: border-box;
+  background-color: rgb(238, 238, 238);
+  border: 1px solid rgb(179, 179, 179);
+  border-radius: 8%;
+  overflow: hidden;
 }
 
 .project-card img {
   width: 100%;
-  height: auto;
+  height: 12rem;
+  border-radius: 5%;
 }
 
 .projects-h1::before,
@@ -73,16 +75,18 @@
   right: -50%;
 }
 
-.pro-date {
-    font-size: 14px;
-    color: #555;
-    padding: 10px;
+.pro-title {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px;
+  color: #3c3c3c;
 }
 
-.pro-title {
-    font-weight: bold;
-    font-size: 18px;
-    padding: 10px;
+.pro-date {
+  font-size: 16px;
+  color: #474747;
+  font-weight: 300;
+  padding-top: 10px;
 }
 
 @media (max-width: 991px) {
