--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -41,9 +41,10 @@
 
 .card-title {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 350;
   padding: 2px;
   color: #3c3c3c;
+  text-decoration: 1px underline;
 }
 
 .card-date {
@@ -51,6 +52,12 @@
   color: #474747;
   font-weight: 300;
   padding-top: 10px;
+}
+
+.arrow-icon {
+  margin-left: 80%;
+  font-size: 20px;
+  color: #303030;
 }
 
 @media (max-width: 1199px) {
