--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -1,5 +1,5 @@
 .portfolio-container {
-  padding: 40px 40px;
+  padding: 50px 65px;
   background-color: #f8f8f8;
   max-width: 100%;
   margin: 0 auto;
@@ -20,13 +20,14 @@
   text-align: center;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 8px;
-  margin-left: 3rem;
+  gap: 5px;
+  margin-left: 2rem;
 }
 
 .port-card {
   width: calc(95% - 1rem);
-  margin-bottom: 1rem;
+  height: 90%;
+  margin-bottom: 0.5rem;
   background-color: rgb(238, 238, 238);
   border: 1px solid rgb(179, 179, 179);
   border-radius: 8%;
@@ -42,7 +43,7 @@
 .card-title {
   font-size: 20px;
   font-weight: 350;
-  padding: 2px;
+  padding: 3px;
   color: #3c3c3c;
   text-decoration: 1px underline;
 }
@@ -56,6 +57,7 @@
 
 .arrow-icon {
   margin-left: 80%;
+  /* margin-bottom: 6%; */
   font-size: 20px;
   color: #303030;
 }
